--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,9 @@ classifiers = [
     "License :: OSI Approved :: GNU Affero General Public License v3",
     "Operating System :: OS Independent",
 ]
-dependencies = []
+dependencies = [
+    "aiohttp>=3.8.4"
+]
 
 [project.urls]
 "Homepage" = "https://github.com/Bailu-Studios/Promethean"
