--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,10 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "aiohttp>=3.8.4"
+    "aiohttp>=3.8.4",
+    "loguru>=0.7.0",
+    "uvicorn>=0.22.0",
+    "fastapi>=0.97.0"
 ]
 
 [project.urls]
