--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -37,3 +37,12 @@ jobs:
       with:
         user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
+    - name: Publish artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: Artifacts for ${{ github.sha }}
+        path: dist/
+    - name: Upload Release File
+      uses: softprops/action-gh-release@v0.1.15
+      with:
+        files: dist/*
